# FiltroArmonicoActivo

./: CMakeLists.txt  FPGA.c  adc_dma_pico.c  parallel_out.pio
AHFViewer/: AHFViewer.py
FPGA/: Links de interés.txt  readme.txt
FPGA/PF/: PF.gprj
FPGA/PF/impl/: PF_process_config.json
FPGA/PF/impl/gwsynthesis/: PF.prj  PF.vg  PF_syn.rpt.html  PF_syn_resource.html  PF_syn_rsc.xml
FPGA/PF/impl/pnr/: PF.binx  PF.db  PF.fs  PF.pin.html  PF.power.html  PF.rpt.html  PF.rpt.txt  PF.timing_paths  PF.tr.html  PF_tr_cata.html  PF_tr_content.html  cmd.do
FPGA/PF/impl/temp/: rtl_parser.result  rtl_parser_arg.json
FPGA/PF/src/: AF.v  LSCLK.v  MAF.v  PF.cst  dead_timeV2.v  portadora.v  signal_demux.v  spwm.v  top_PF.v  triang30.hex
FPGA/PF/src/gowin_clkdiv/: gowin_clkdiv.mod  gowin_clkdiv.v  gowin_clkdiv_tmp.v
Inversor/: README.md  SPWM_FINAL.ino
Jupyter_Angel/: analisis_sensado_corriente.ipynb
Jupyter_Angel/Guía 2/fir/fir/: filtro_fir.v  tb_filtro_fir.v  tb_filtro_fir.v.bak
Jupyter_Angel/Guía 2/iir/iir/: filter_tb.v  filter_tb.v.bak
Jupyter_Angel/Guía 2/iirv2/iirv2/: IIR_Filter_Design.ipynb
Jupyter_Angel/Guía 2/lab/lab/python/: coeff.ipynb
Jupyter_Angel/Guía 2/script/: fir_filter_direct_form.ipynb  iir_filter_direct_form.ipynb
Matlab/: FIR_Fixed.m  MAF.m  MVSSLMS.m  SPWM.m
Testeos con ESP32/: FPGA.c  PICO.c
test_adc/: analysis.m  data_enviada.txt  data_recibida.txt  test_3_channels.txt
test_adc/data_receiver/: data_receiver.ino
